<resources>
    <string name="app_name">PuzzleCrime</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="paragraph_stage1">Detective Flanders and the Zodiac Killer is a Puzzle Crime 5tory,
        exclusively created for Puzzle Prime. Every chapter you read contains a puzzle that must be solved in order to continue further.
        Sometimes it may not be instantly clear what the puzzle is, but there will be clues spread over the text to guide you.
        0nce you figure it out, you will reveal a four-digit passcode which will be your key to the next chapter.\n
        Can you unravel the captivating story of Detective Flanders and the 2odiac Killer?
        Press button and insert your passcode to find out.</string>
    <string name="cancle">Cancle</string>
    <string name="continueVar">Continue</string>
    <string name="passcode">Passcode</string>
    <string name="paragraph_stage2">You could easily tell Detective Flanders was a peculiar person by just looking at him.
        He had many obsessions, but the most noteworthy was his obsession with time.
        Constantly keeping track of it, Flanders was never late for any occasion.
        Naturally, the detective had a love for watches, especially electronic ones.
        He was fascinated by their accuracy and dependability.
        He had a small collection of rare electronic watches on one of his shelves,
        which he examined every evening before bed.
        Interestingly, none of them were adjusted to show the correct time and nobody knew the reason except for Flanders himself.</string>
    <string name="paragraph_stage2.1">While going through his daily watch examination,
        Flanders noticed that there was something off with one of his watches. He meticulously fixed it and then continued his evening routine.
        However, just when he went under the blankets and started drifting away, his phone rang. He looked at the screen and read “Commissioner Morrow.”
        Flanders had to answer as he rarely received calls from the police department, and never at night.
        \n “Good evening, Commissioner. Didn’t expect calls at this time, is there a problem?”
        \n “Hello, Flanders. We have a case here and I think you may be interested.”
        \n “I’m listening…” he replied, yet couldn’t stop thinking about his watch.”</string>
    <string name="paragraph_stage3">
        Detective Flanders was at the crime scene twenty minutes after he received the call. Commissioner Morrow didn’t give much information over the phone, just said that it was “messed up” and “hard to explain.”
        Flanders parked his car next to an abandoned building with police tape at the entrance and several cops standing in front of it.
        Upon his arrival, the commissioner was the first one to greet the detective.
        Flanders could see Morrow was deeply disturbed and his demeanor ignited his curiosity. He loved mysteries and tonight was going to be a big one.
        \n“What is the fuss about, Commissioner, someone got his TV stolen?” Flanders tried to make a joke, but it fell somewhat flat.
        \n “I wish that were the case,” replied the commissioner. “Cold-blooded murder, the first one this year. It looks like some religious cult is involved. I’ve never seen anything like it.”
        \n “Interesting. Did you find any clues? Where is the victim?”
        \n “I’ll take you there in a moment, but first look at this. We found it next to the body.” Morrow pulled a sealed plastic bag with a small rectangular card inside out of his pocket and handed it to Flanders.
    </string>
    <string name="paragraph_stage3.1">
        \n “Greed.” Flanders read the word written on the front side of the card, flipped it (left-to-right) to examine the back, and then gave it back to Morrow. “I wonder what the punishment for this sin is.”
        \n “You won’t believe it, come with me.” The commissioner led Flanders underneath the line tape and they both entered the building.
    </string>
    <string name="paragrap_stage4">
        Morrow and Flanders went through several narrow corridors until they reached a spacious dark room full of officers.
        They were all analyzing something in great detail and then Flanders saw it, on the opposite wall there was a dead man tied to a cross.
        The room was silent; all anyone could do was stare.
    </string>
    <string name="paragrap_stage4.1">
        “Father, forgive them; for they know not what they do.” the detective uttered.
        \n “What did you say?” asked the Commissioner.
        \n “Jesus’ last words, he was referring to the Roman soldiers who put him there.” Flanders clarified. “Who is the poor fellow?”
        \n “His name is Donnie, a local millionaire.”
        \n “Did he have any enemies?”
        \n “Many, but nobody we know crazy enough to do this.”
        Flanders fell silent as he approached the body and examined it. He noticed there was also writing on the wall surrounding the cross.
        Flanders scribbled something in his notepad, turned around, and left.
        \n “Call me when you find the next victim,” he said to the Commissioner on his way out.
    </string>
    <string name="introdutioncontent">“Detective Flanders and the Zodiac Killer” is a puzzle crime story, created exclusively for Puzzle Prime.
        Each chapter contains a puzzle which once solved, yields a 4-digit number, which can be used as a passcode for the next chapter.</string>
    <string name="informationaboutgame">This game was created base on this web( link below)  </string>
    <string name="linkweb">https://www.puzzleprime.com/puzzle-stories/</string>
    <string name="puzzelinformation">Got stuck with some puzzle? You can get hints by clicking our forum bellow</string>
    <string name="paragraph_stage5">On the very next day the detective received another call. There was a second murder, this time in the city’s main park.
        Exactly 20 minutes after he hung up the phone, Flander arrived at the scene of the crime.
        Once again Commissioner Morrow was waiting for him, looking even more worried than the last time they met.
        \n “We’ve identified her,” Morrow said, skipping formalities.
        \n “It’s Ilaria Clapton, the former Mayor’s wife. Trying to reach her husband now. I have to warn you, the murderer doesn’t lack imagination.”
        \n Morrow and Flanders made their way through the dozens of policemen gathered at the crime scene until they got to Ilaria’s body. The scene was shocking.</string>
    <string name="paragraph_stage5.1">
        “Is that paint on her body?” asked the detective.
        \n“Yes, the guy has painted her limbs in purple. Any idea why he would do that?”
        \n“It’s violet, usually associated with the sin of pride,” answered Flanderss. “Did you find any evidence?”
        \n“This time nothing, not even a cryptic card.”
        \n“I’m sure something is hidden around here. Make sure to search everywhere within 100 feet of the body,” advised Flandersss.
        \nMorrow was still staring at the body. “I’ll check with my men.”
    </string>
    <string name="paragraph_stage6">
        Flanders and Morrow were waiting aside, observing the constant movement of police officers on the crime scene.
        After about 30 minutes, one of them yelled, “I found something buried here. It looks like a box.”
        Suddenly everybody stopped doing their work and gathered around him. Morrow made his way through the other men and took the box from the officer.
        He held it for a few moments and after brief hesitation passed it to Flanders. The detective nodded to the Commissioner, accepted the box and opened it.
         Inside there were two items: an old audio player and a cassette tape.Flanders read the tape’s labe, it looked like it had some of Queen’s best hits.
        He took it out of the case, inserted it in the player and pressed PLAY. There was a slight humming noise resulting from the antiquated audio quality. 
        Then a voice emerged:
    </string>
    <string name="paragraph_stage7">
        The police department and Detective Flanders continued to look for more evidence at the crime scene for the next few hours.
        It was a public park where many people passed by on a daily basis; finding traces left by the murderer seemed an impossible task.
        It was almost midnight and most of the police officers had already gone home for the day when Flanders noticed something in the mud.
        He called the commissioner to check while he began analyzing. Morrow didn’t notice anything unusual.
    </string>
    <string name="paragraph_stage7.1">
        \n “You don’t notice anything strange there?” The detective asked.
        \n “I see a lot of footprints. Am I missing something?”
        \n “Look more carefully,” advised Flanders and a subtle smile appeared on his face.
    </string>
    <string name="paragraph_stage8">
        After several moments of awkward silence, Flanders finally explained his observation:
        \n “Do you see those two footprints? They should be a pair, but are mismatched.”
        \n “Oh yes, I can see them now,” Morrow replied and felt a little embarrassed for not noticing it himself. “What, you think they belong to our killer?”
        \n “Can’t be sure, but it is definitely something worth looking into.”
        \n The commissioner was just about to reply when a police officer came to them with a worried expression.
        \n “What’s up, son?” asked Morrow.
        \n “It’s Mr. Phil Clapton, sir, he doesn’t pick up his phone. We went to his mansion to meet with him, but he doesn’t open the door either,” reported the officer.
        \n “Was the door locked? Did you try to get inside?”
        \n “The door was locked, sir, but we didn’t want to break in without checking with you first.”
        \n The commissioner sighed, “I have a bad feeling about this”, and got ready to go.
        Fifteen minutes later, Morrow, Flanders, and three other police officers were in front of the former mayor’s house.
        It was a large building with its own parking lot, a fountain, and everything you could expect from an expensive, luxurious mansion.
        The five men tried to call Phil one last time, and when nobody answered, they broke the door.
        It didn’t take them long before they found him lying dead in the Claptons’ personal gallery room. He was holding a red rose in his hands.
    </string>
    <string name="paragraph_stage9">
        The next several hours passed by with Flanders, Morrow, and few other policemen inspecting the former Mayor’s body and the gallery for clues left behind by the killer.
        Two more officers were watching the security camera videos in a separate room and a dozen more were still analyzing the death of Mrs.
        Clapton in the park. The pattern was clear – the victims were getting “punished” for their deadly sins, and Phil Clapton was chosen for his “lust”.
        His numerous affairs throughout the years were no secret and now he paid for them with his life.
        Suddenly one of the officers watching the security tapes rushed to the gallery and yelled at Commissioner Morrow and Detective Flanders:
        \n “We found him! He is on one of the tapes, you must see this!”
        \n Flanders and Morrow looked at each other with disbelief and quickly went to the security room.
        The officer who called them there put his finger on a button and told them to pay attention. Footage started playing on one of the monitors…
    </string>
</resources>