<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardBackgroundColor="@android:color/holo_blue_dark"
        app:cardCornerRadius="15dp"
        app:cardMaxElevation="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleDiaLog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/passcode"
                android:textAlignment="center"
                android:textSize="24sp"
                app:drawableLeftCompat="@android:drawable/ic_lock_idle_lock" />

            <EditText
                android:id="@+id/passcodeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:autofillHints=""
                android:background="@drawable/custom_button_shape"
                android:ems="10"
                android:inputType="number"
                android:padding="10dp"
                android:textAlignment="center"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@android:color/holo_blue_dark"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/continueBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button_shape"
                    android:text="@string/continueVar" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cancleBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button_shape"
                    android:text="@string/cancle" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>